[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmapf-simulator"
version = "0.1.0"
description = "Multi-Agent Path Finding Simulator for warehouse AGV environments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["multi-agent", "path-finding", "warehouse", "AGV", "pettingzoo"]

dependencies = [
    "numpy>=1.21.0",
    "networkx>=2.6.0",
    "pettingzoo>=1.22.0",
    "gymnasium>=0.26.0",
    "PySide6>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/lmapf-simulator"
Repository = "https://github.com/yourusername/lmapf-simulator"

[tool.setuptools.packages.find]
where = ["."]
include = ["LMAPFEnv*"]
