[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["LMAPFEnv"]

[project]
name = "LMAPFEnv"
version = "0.1.0"
description = "Multi-Agent Path Finding Simulator for warehouse AGV environments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["multi-agent", "path-finding", "warehouse", "AGV", "pettingzoo"]

dependencies = [
    "numpy>=1.21.0",
    "networkx>=2.6.0",
    "pettingzoo>=1.22.0",
    "gymnasium>=0.26.0",
    "PySide6>=6.4.0",
]

